examples/valid/advanced/printTriangle.wacc
# print a fixed size triangle
# Output:
# --------
# -------
# ------
# -----
# ----
# ---
# --
# -

#Program:#

begin
	string f(int x) is
    if x == 0 then
      skip
    else
      int i = x ;
      while i > 0 do 
        print "-" ;
        i = i - 1
      done ;
      println "" ;
      string s = call f(x - 1)
    fi ;
    return "done" 
	end
	string s = call f(8) 
end
